# AI-Act-Risk-Classifier-Agent-with-MCP-LangGraph

./: .dockerignore  .gitignore  CLAUDE.md  GUIDEBOOK.md  README.md  docker-compose.yml  package.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_foundation.py  002_policy_snapshot_foundation.py  003_norm_fragments.py  004_cases_and_dossiers.py  005_artifact_intelligence_foundation.py  006_assessment_runs.py  007_workflow_runs.py  008_review_decisions.py  009_connector_reassessment_foundation.py
apps/api/src/eu_comply_api/: __init__.py  config.py  main.py
apps/api/src/eu_comply_api/api/: deps.py  router.py
apps/api/src/eu_comply_api/core/: logging.py  security.py
apps/api/src/eu_comply_api/db/: base.py  bootstrap.py  models.py  session.py
apps/api/src/eu_comply_api/domain/: models.py
apps/api/src/eu_comply_api/mcp/: __init__.py  servers.py
apps/api/src/eu_comply_api/runtime/: __init__.py  base.py  exceptions.py  factory.py  ollama.py  openrouter.py
apps/api/src/eu_comply_api/services/: artifact_service.py  artifact_storage_service.py  assessment_service.py  auth_service.py  benchmark_service.py  case_service.py  connector_service.py  document_intelligence_service.py  monitoring_service.py  policy_fixture_loader.py  policy_service.py  reassessment_service.py  report_service.py  review_service.py  rule_pack_service.py  runtime_control_service.py  (+1 more)
apps/api/tests/: conftest.py  test_artifacts.py  test_assessments.py  test_auth.py  test_benchmarks.py  test_cases.py  test_connectors.py  test_health.py  test_mcp_servers.py  test_monitoring.py  test_policy.py  test_reports.py  test_reviews.py  test_rule_packs.py  test_runtime.py  test_workflows.py
(+40 files in other folders)
